2009-10-05  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (operator ==): Include fast case.
	* base-lu.cc (base_lu::packed, base_lu::unpack): New methods.
	(base_lu::L, base_lu::U, base_lu::Y, base_lu::getp): Distinguish
	packed vs. unpacked case.
	* base-lu.h: Update decls.
	(base_lu::l_fact): New member field.

2009-10-02  Jaroslav Hajek  <highegg@gmail.com>

	* lo-traits.h (strip_template_param): New trait class.

2009-10-01  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::permute): Fast case identity permutation.

2009-09-27  Jaroslav Hajek  <highegg@gmail.com>

	* oct-cmplx.h: Fix complex-real orderings.

2009-09-27  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::redim): Rewrite.
	* Array-util.cc (sub2ind): Allow single index case.

2009-09-26  Jaroslav Hajek  <highegg@gmail.com>

	* dMatrix.cc (xgemm): Use blas_trans_type to indicate transposes.
	(operator *(const Matrix&, const Matrix&)): Update.
	* fMatrix.cc (xgemm): Use blas_trans_type to indicate transposes.
	(operator *(const FloatMatrix&, const FloatMatrix&)): Update.
	* CMatrix.cc (xgemm): Use blas_trans_type to indicate transposes.
	(operator *(const ComplexMatrix&, const ComplexMatrix&)): Update.
	* fCMatrix.cc (xgemm): Use blas_trans_type to indicate transposes.
	(operator *(const FloatComplexMatrix&, const FloatComplexMatrix&)): Update.
	* dMatrix.h: Update decl.
	* fMatrix.h: Update decl.
	* CMatrix.h: Update decl.
	* fCMatrix.h: Update decl.

2009-09-23  Jaroslav Hajek  <highegg@gmail.com>

	* CMatrix.cc (ComplexMatrix::ComplexMatrix (const Matrix&, const
	Matrix&)): New constructor.
	(operator * (Matrix, ComplexMatrix), operator * (ComplexMatrix,
	Matrix)): Optimize.
	* fCMatrix.cc (FloatComplexMatrix::FloatComplexMatrix (const FloatMatrix&, const
	FloatMatrix&)): New constructor.
	(operator * (FloatMatrix, FloatComplexMatrix), operator * (FloatComplexMatrix,
	FloatMatrix)): Optimize.

2009-09-23  Jaroslav Hajek  <highegg@gmail.com>
